[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OpcUaTest"
version = "0.0.1"
authors = [
  { name="Kai Huebl", email="kai@huebl-sgh.de" },
]
description = "OPC UA test framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ASNeG/OpcUaTest"
"Bug Tracker" = "https://github.com/ASNeG/OpcUaTest/issues"